# pnums

./: .gitignore  0.3.0  README.md  README.rst  pyproject.toml  setup-conda-linux.sh  setup-conda-window.bat  setup.py  tox.ini
.github/workflows/: publish.yml  pythonpackage.yml
coordencode/: __init__.py  int_to_xcoords.py  ith_middle.py  xcoords_to_int.py
pcoords/: approximate_neural_binary.py  display.py  ento.py  ith_middle.py  neuralbinary.py  neuralfloat.py
pnums/: __init__.py  int_to_xcoords.py  ith_middle.py  loss.py  neuralfloat.py  p_int.py  xcoords_to_int.py
tests/: test_p_int.py
tests/test_p/: test_and_gate.py  test_p_int.py
visualizations/: _display.py
