[tool.poetry]
name = 'pnums'
version = '0.0.3'
description = 'A library that encodes coordinates so neural networks can use them better.'
authors = ['SimLeek <simulator.leek@gmail.com>']
license = 'MIT'
readme = "README.rst"
repository = "https://github.com/simleek/pnums"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.16.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "5.2.1"
typing = "3.7.4.1"
mock = "^3.0"
tox = "^3.14"
tox-gh-actions = "^0.3.0"
coverage = "^4.5"
sphinx = "^2.2"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
pydocstyle = "^4.0"

[build-system]
requires = ['poetry']
build-backend = "poetry.masonry.api"

